package pt.ipp.isep.dei.ui;

import pt.ipp.isep.dei.dto.PlayerDTO;
import pt.ipp.isep.dei.dto.StationCreationRequestDTO;
import pt.ipp.isep.dei.dto.StationResponseDTO;
import pt.ipp.isep.dei.dto.ValidationResultDTO;

class BuildStationUI {
    public void displayStationTypes() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public StationCreationRequestDTO getStationCreationInput() {
        return null;
    }

    public void displayValidationResult(ValidationResultDTO result) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public void displayStationCreated(StationResponseDTO station) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public void displayPlayerInfo(PlayerDTO player) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
